[gd_scene load_steps=3 format=3 uid="uid://hbpket74t6f7"]

[ext_resource type="Script" uid="uid://vbyesiqqwfur" path="res://addons/commitreminder/Reminder.gd" id="1_dxju6"]
[ext_resource type="AudioStream" uid="uid://o8wqcv7gjfkn" path="res://Assets/Audio/SFX/Pause.wav" id="2_kjwcf"]

[node name="Reminder" type="PanelContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dxju6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 0.0
value = 2.5
suffix = "Minutes"

[node name="Start" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Pause" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Pause"

[node name="Inactive" type="Label" parent="VBoxContainer"]
modulate = Color(0.41215247, 0.41215247, 0.41215247, 1)
layout_mode = 2
text = "Timer Inactive."
horizontal_alignment = 1

[node name="TimerCountdown" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "00:00:00 Left."
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_kjwcf")
pitch_scale = 1.5

[node name="Window" type="Window" parent="."]
oversampling_override = 1.0
title = "COMMIT"
initial_position = 4
size = Vector2i(256, 100)
visible = false
exclusive = true
always_on_top = true

[node name="Control" type="Control" parent="Window"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Window/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "REMEMBER TO COMMIT YOUR CHANGES YOU CUNT"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Start" to="." method="start_timer"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Pause" to="." method="on_pressed"]
[connection signal="timeout" from="Timer" to="." method="timer_finished"]
[connection signal="timeout" from="Timer" to="Window" method="show"]
[connection signal="close_requested" from="Window" to="." method="start_timer"]
[connection signal="close_requested" from="Window" to="Window" method="hide"]
